--- a/service_a/cup10703.html
+++ b/service_a/cup10703.html
@@ -162,10 +162,8 @@
 						</div>
 						<!-- 컨텐츠 영역 -->
 						<div class="layout Layout_List">
-							<!-- 2019-02-01 수정 -->
-							<h2 class="tit" id="i10701_serviceListLb">Service List</h2>
+							<h2 class="tit" id="i10703_tariffListLb">Tariff List</h2>
 							<div class="schOptionGroup">
-								<!-- 2019-02-01 수정 -->
 								<ul class="itemList1">
 									<li>
 										<dl class="inpItem">
@@ -173,8 +171,8 @@
 											<dd>
 												<div class="inputBox schType keyword">
 													<div class="inner">
-														<input type="text" name="" class="inp autoSch keyword name" id="" placeholder="Type Company Name">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
+														<input type="text" name="" class="inp autoSch keyword name" id="" placeholder="">
+														<button type="button" class="inpReset"></button>
 													</div>
 												</div>
 											</dd>
@@ -182,7 +180,7 @@
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt>Service Type</dt>
+											<dt>Customer Type</dt>
 											<dd>
 												<div class="comboBox">
 													<select class="comboSelect" id="" placeholder="Select a Type">
@@ -207,13 +205,12 @@
 										</dl>
 									</li>
 								</ul>
-								<button type="button" class="btn schBtn" id="i10701_search">Search</button>
-								<!--// 2019-02-01 수정 -->
+								<button type="button" class="btn schBtn" id="i10703_search">Search</button>
 							</div>
-							<h3 class="tit" id="i10701_servicesLb">Services</h3>
+							<h3 class="tit" id="i10703_tariffsLb">Tariffs</h3>
 							<div class="ibsheepTop">
-								<div class="filter" id="i10701_filterStatus">filter</div>
-								<button type="button" class="btn" id="i10701_addService">Add Service</button> <!-- 2019-02-01 수정 -->
+								<div class="filter" id="i10703_filterStatus">filter</div>
+								<button type="button" class="btn" id="i10703_addTariff">Add Tariff</button>
 							</div>
 							<div class="ibsheetDiv">
 								ibsheet
