--- a/user/cup10101.html
+++ b/user/cup10101.html
@@ -121,7 +121,6 @@
 						</div>
 					</nav>
 					<div class="content editBtns">
-						<!-- 2019-02-07 클래스 추가 -->
 						<div class="tabWrap">
 							<ul class="tabList">
 								<li class="home single">
@@ -163,39 +162,109 @@
 						</div>
 						<!-- 컨텐츠 영역 -->
 						<div class="layout Layout_Sidebar">
-							<!-- 2019-02-01 수정 -->
-							<h2 class="tit" id="cup10702_serviceLb">Service</h2>
-							<div class="serviceCode">
-								<!-- 2019-01-30 수정 -->
-								<div class="srvNum" id="cup10702_serviceIDLb">
-									<div class="inputBox inpNone">
-										<input type="text" name="" class="inp" id="" readonly="readonly" value="S10000001">
-									</div>
-								</div>
-								<!--// 2019-01-30 수정 -->
-								<div class="actChk">
-									<!-- 2019-01-29 수정 -->
-									<div class="switchChk">
-										<input type="checkbox" name="cup10702_activeChk" id="cup10702_activeChk">
-										<label for="cup10702_activeChk" id="cup10702_active">
-											<span class="txt1">Inactive</span>
-											<span class="txt2">Active</span>
-										</label>
-									</div>
-									<!--// 2019-01-29 수정 -->
-								</div>
-							</div>
+							<h2 class="tit" id="">Profile</h2>
 							<div class="inner">
-								<!-- 2019-02-07 클래스 수정 -->
 								<div class="lsCont">
-									<h3 class="tit" id="cup10702_basicLb">Basic</h3>
+									<h3 class="tit" id="">Basic</h3>
+									<div style="height:50px; background:skyblue;">사진교체</div>
 									<ul class="itemList2">
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_serviceTypeLb">Service Type</dt>
+												<dt id="">Language Name</dt>
+												<dd>
+													<div class="inputBox">
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
+													</div>
+													<div class="tooltip">
+														<div class="tips">
+															<strong class="tit">Language Name</strong>
+															<p class="txt">Language Name Is <br />your name in native<br /> language, as it appear<br /> language.</p>
+														</div>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Display Name</dt>
+												<dd>
+													<div class="inputBox">
+														<input type="text" name="" class="inp Mandate" id="">
+														<button type="button" class="inpReset"></button>
+													</div>
+													<div class="tooltip">
+														<div class="tips">
+															<strong class="tit">Display Name</strong>
+															<p class="txt">Display Name is <br />shown on the system</p>
+														</div>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Password</dt>
+												<dd>
+													<button type="button" class="btn">Change Password</button>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">English Name</dt>
+												<dd>
+													<div class="inputBox Edit_AlphaNum">
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Telephone Number</dt>
+												<dd>
+													<div class="inputBox">
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Email</dt>
+												<dd>
+													<div class="inputBox">
+														<input type="text" name="" class="inp Readonly" id="" readonly="readonly">
+													</div>
+													<div class="tooltip">
+														<div class="tips">
+															<strong class="tit">Email</strong>
+															<p class="txt">You can’t change your <br />Email during <br />subscription. </p>
+														</div>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Mobile Phone Number</dt>
+												<dd>
+													<div class="inputBox">
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
+													</div>
+												</dd>
+											</dl>
+										</li>
+										<li>
+											<dl class="inpItem">
+												<dt id="">Department</dt>
 												<dd>
 													<div class="comboBox">
-														<select class="comboSelect" id="cup10702_serviceType" placeholder="Select a Type">
+														<select class="comboSelect" id="" placeholder="Select a Type">
 															<option value="">Select a Type</option>
 															<option value="T-Shirt">T-Shirt</option>
 															<option value="T-Shirt Woman">T-Shirt Woman</option>
@@ -208,56 +277,36 @@
 										</li>
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_serviceNameLb">Service Name</dt>
+												<dt id="">Fax Number</dt>
 												<dd>
 													<div class="inputBox">
-														<input type="text" name="cup10702_serviceName" class="inp Mandate" id="cup10702_serviceName" maxlength="50">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
 													</div>
 												</dd>
 											</dl>
 										</li>
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_serviceAliasLb">Service Alias</dt>
+												<dt id="">Social Network</dt>
 												<dd>
-													<!-- 2019-02-07 수정 -->
 													<div class="inputBox">
-														<input type="text" name="cup10702_serviceAlias" class="inp" id="cup10702_serviceAlias">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-													</div>
-													<div class="tooltip">
-														<div class="tips">
-															<strong class="tit">Alias</strong>
-															<p class="txt">Alias can be service <br />code or abbreviation.</p>
-														</div>
-													</div>
-													<!--// 2019-02-07 수정 -->
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_descriptionLb">Description</dt>
-												<dd>
-													<div class="textareaDiv">
-														<textarea name="" id="cup10702_description" cols="30" rows="10" class="textarea" maxlength="500"></textarea>
-														<div class="byte"><span class="bold">100</span>/150</div>
+														<input type="text" name="" class="inp" id="">
+														<button type="button" class="inpReset"></button>
 													</div>
 												</dd>
 											</dl>
 										</li>
 									</ul>
 
-									<h3 class="tit" id="cup10702_suggestedTariffLb">Selling</h3>
+									<h3 class="tit" id="">System Options</h3>
 									<ul class="itemList2">
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_suggestedTariff">Suggested Tariff</dt>
+												<dt id="">Language</dt>
 												<dd>
-													<!-- 2019-01-31 수정 -->
 													<div class="comboBox">
-														<select class="comboSelect" id="cup10702_suggestedTariff" placeholder="Select a Tariff">
+														<select class="comboSelect" id="" placeholder="Select a Type">
 															<option value="">Select a Type</option>
 															<option value="T-Shirt">T-Shirt</option>
 															<option value="T-Shirt Woman">T-Shirt Woman</option>
@@ -265,35 +314,37 @@
 															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 														</select>
 													</div>
-													<!--// 2019-01-31 수정 -->
 												</dd>
 											</dl>
 										</li>
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_addTariffLb">Need New Tariff?</dt>
+												<dt id="">Date Display Format</dt>
 												<dd>
-													<button type="button" class="btn" id="cup10702_newTariff">Add Tariff</button> <!-- 2019-02-01 수정 -->
-												</dd>
-											</dl>
-										</li>
-										<li>
-											<dl class="inpItem">
-												<dt id="cup10702_isForOnlineSalesLb">Is for Online Sales</dt>
-												<dd>
-													<div class="checkbox">
-														<input type="checkbox" name="cup10702_isForOnlineSalesChk" id="cup10702_isForOnlineSalesChk" checked="checked"><label for="cup10702_isForOnlineSalesChk" id="cup10702_isForOnlineSales">Apply</label>
+													<div class="comboBox">
+														<select class="comboSelect" id="" placeholder="Select a Type">
+															<option value="">Select a Type</option>
+															<option value="T-Shirt">T-Shirt</option>
+															<option value="T-Shirt Woman">T-Shirt Woman</option>
+															<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+														</select>
 													</div>
 												</dd>
 											</dl>
 										</li>
 										<li>
 											<dl class="inpItem">
-												<dt id="cup10702_displayOrderLb">Display Order</dt>
+												<dt id="">Time Display Format</dt>
 												<dd>
-													<div class="inputBox">
-														<input type="text" name="cup10702_displayOrder" class="inp" id="cup10702_displayOrder" placeholder="Ascending Order" maxlength="10">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
+													<div class="comboBox">
+														<select class="comboSelect" id="" placeholder="Select a Type">
+															<option value="">Select a Type</option>
+															<option value="T-Shirt">T-Shirt</option>
+															<option value="T-Shirt Woman">T-Shirt Woman</option>
+															<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+															<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+														</select>
 													</div>
 												</dd>
 											</dl>
@@ -305,60 +356,53 @@
 									<dl class="inpItem2">
 										<dt id="cup10702_createdOnLb">Created on</dt>
 										<dd>
-											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_createDate" class="inp Readonly" id="cup10702_createDate" value="12-14-2018" readonly />
+													<input type="text" name="" class="inp Readonly" id="" value="12-14-2018" readonly />
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_createTime" class="inp Readonly" id="cup10702_createTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="" class="inp Readonly" id="" value="10 : 20 AM" readonly="readonly">
 												</div>
 											</div>
-											<div class="ele">
-												<div class="inputBox Edit_User">
-													<!-- 2019-02-01 수정 -->
-													<div class="thumb">
-														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
-													</div>
-													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_createdBy" class="inp Readonly" id="cup10702_createdBy" value="Park, JungIl" readonly="readonly">
-												</div>
-											</div>
-											<!--// 2019-01-31 수정 -->
 										</dd>
 									</dl>
-
 									<dl class="inpItem2">
 										<dt id="cup10702_modifiedOnLb">Modified on</dt>
 										<dd>
-											<!-- 2019-01-31 수정 -->
 											<div class="ele">
 												<div class="inputBox Edit_date single">
-													<input type="text" name="cup10702_modifiedDate" class="inp Readonly" id="cup10702_modifiedDate" value="12-14-2018" readonly />
+													<input type="text" name="" class="inp Readonly" id="" value="12-14-2018" readonly />
 												</div>
 												<div class="inputBox Edit_Time readonly">
-													<input type="text" name="cup10702_modifiedTime" class="inp Readonly" id="cup10702_modifiedTime" value="10 : 20 AM" readonly="readonly">
+													<input type="text" name="" class="inp Readonly" id="" value="10 : 20 AM" readonly="readonly">
 												</div>
 											</div>
-											<div class="ele">
-												<div class="inputBox Edit_User">
-													<!-- 2019-02-01 수정 -->
-													<div class="thumb">
-														<img src="../static/images/common/icon/icon_person_small.png" alt="" />
-													</div>
-													<!--// 2019-02-01 수정 -->
-													<input type="text" name="cup10702_modifiedBy" class="inp Readonly" id="cup10702_modifiedBy" value="Park, JungIl" readonly="readonly">
-												</div>
-											</div>
-											<!--// 2019-01-31 수정 -->
 										</dd>
 									</dl>
 
+									<h3 class="tit">Invite User</h3>
+									<div class="iTxtCont">
+										<p class="txt" id="">
+											Invite User allow you to invite other users to manage your subscription. Invited user will be belong to your organization
+										</p>
+										<div class="btnBox">
+											<button type="button" class="btn">Invite User</button>
+										</div>
+									</div>
+
+									<h3 class="tit">Leave Organization?</h3>
+									<div class="iTxtCont">
+										<p class="txt" id="">
+											Leave your organization? <br />To inactive the user account, you must define alternate account to organization’s subscription manager.
+										</p>
+											<div class="btnBox">
+												<button type="button" class="btn">Leave Organization</button>
+											</div>
+									</div>
 								</div>
 							</div>
 							<div class="editBtns">
-								<!-- 2019-02-07 클래스 수정 -->
-								<button type="button" class="btn basic" id="cup10702_Save">Save</button> <!-- 2019-02-01 수정 -->
+								<button type="button" class="btn basic" id="cup10702_Save">Save</button>
 							</div>
 						</div>
 						<!--// 컨텐츠 영역 -->
@@ -367,13 +411,11 @@
 			</section>
 		</form>
 	</div>
-	<!-- 2019-02-07 추가 -->
 	<script type="text/javascript">
 		$(function() {
 			$('form').areYouSure();
 		});
 	</script>
-	<!--// 2019-02-07 추가 -->
 </body>
 
 </html>
