--- a/common/header.html
+++ b/common/header.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="../static/js/lib/jQuery.dPassword.js"></script>
 	<script type="text/javascript" src="../static/js/lib/jquery.easy-autocomplete.js"></script>
 	<script type="text/javascript" src="../static/js/lib/semantic.min.js"></script>
+	<script type="text/javascript" src="../static/js/lib/jquery.are-you-sure.js"></script>
 	<script type="text/javascript" src="../static/js/ui.js"></script>
 	<!--[if lt IE 9]>
     <script type="text/javascript">
@@ -36,6 +37,11 @@
 
 	<header id="headerWrap">
 		<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+		<div class="menuAll">
+			<button type="button" class="allBtn">
+				<span>Menu</span>
+			</button>
+		</div>
 	</header>
 
 
