--- a/common/nav.html
+++ b/common/nav.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="../static/js/lib/jQuery.dPassword.js"></script>
 	<script type="text/javascript" src="../static/js/lib/jquery.easy-autocomplete.js"></script>
 	<script type="text/javascript" src="../static/js/lib/semantic.min.js"></script>
+	<script type="text/javascript" src="../static/js/lib/jquery.are-you-sure.js"></script>
 	<script type="text/javascript" src="../static/js/ui.js"></script>
 	<!--[if lt IE 9]>
     <script type="text/javascript">
@@ -35,12 +36,6 @@
 
 
 	<nav>
-		<div class="menuAll">
-			<button type="button" class="allBtn">
-				<!-- 2019-02-01 수정 -->
-				<span>Menu</span>
-			</button>
-		</div>
 		<div class="gnb">
 			<ul class="gnbList">
 				<li>
