--- a/homepage/cup00002.html
+++ b/homepage/cup00002.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="../static/js/lib/jQuery.dPassword.js"></script>
 	<script type="text/javascript" src="../static/js/lib/jquery.easy-autocomplete.js"></script>
 	<script type="text/javascript" src="../static/js/lib/semantic.min.js"></script>
+	<script type="text/javascript" src="../static/js/lib/jquery.are-you-sure.js"></script>
 	<script type="text/javascript" src="../static/js/ui.js"></script>
 	<!--[if lt IE 9]>
     <script type="text/javascript">
