--- a/login/cup10011.html
+++ b/login/cup10011.html
@@ -162,59 +162,8 @@
 						</div>
 						<!-- 컨텐츠 영역 -->
 						<div class="layout Layout_List">
-							<!-- 2019-02-01 수정 -->
-							<h2 class="tit" id="i10701_serviceListLb">Service List</h2>
-							<div class="schOptionGroup">
-								<!-- 2019-02-01 수정 -->
-								<ul class="itemList1">
-									<li>
-										<dl class="inpItem">
-											<dt id="">Keyword</dt>
-											<dd>
-												<div class="inputBox schType keyword">
-													<div class="inner">
-														<input type="text" name="" class="inp autoSch keyword name" id="" placeholder="Type Company Name">
-														<button type="button" class="inpReset"></button> <!-- 2019-02-01 수정 -->
-													</div>
-												</div>
-											</dd>
-										</dl>
-									</li>
-									<li>
-										<dl class="inpItem">
-											<dt>Service Type</dt>
-											<dd>
-												<div class="comboBox">
-													<select class="comboSelect" id="" placeholder="Select a Type">
-														<option value="">Select a Type</option>
-														<option value="T-Shirt">T-Shirt</option>
-														<option value="T-Shirt Woman">T-Shirt Woman</option>
-														<option value="Yellow T-Shirt">Yellow T-Shirt</option>
-														<option value="Zebra T-Shoot">Zebra T-Shoot</option>
-													</select>
-												</div>
-											</dd>
-										</dl>
-									</li>
-									<li>
-										<dl class="inpItem">
-											<dt>Creation</dt>
-											<dd>
-												<div class="inputBox Edit_date">
-													<input type="text" name="daterange" class="inp daterange" id="" placeholder="From - To" />
-												</div>
-											</dd>
-										</dl>
-									</li>
-								</ul>
-								<button type="button" class="btn schBtn" id="i10701_search">Search</button>
-								<!--// 2019-02-01 수정 -->
-							</div>
-							<h3 class="tit" id="i10701_servicesLb">Services</h3>
-							<div class="ibsheepTop">
-								<div class="filter" id="i10701_filterStatus">filter</div>
-								<button type="button" class="btn" id="i10701_addService">Add Service</button> <!-- 2019-02-01 수정 -->
-							</div>
+							<h2 class="tit" id="i10011_homeLb">Welcome to OPUS Logistics!</h2>
+							<h3 class="tit" id="i10011-noticeLb">Notice</h3>
 							<div class="ibsheetDiv">
 								ibsheet
 							</div>
