--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -223,9 +223,38 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
+	<h2>input타입 - Percent</h2>
+	<div class="inputBox Percent onlyNumber">
+		<input type="text" name="" class="inp Mandate onlyNumber" id="">
+		<button type="button" class="inpReset"></button>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox Percent onlyNumber">
+				<input type="text" name="" class="inp Mandate onlyNumber" id="">
+				<button type="button" class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
 
 
-
+	<h2>input타입 - Only Number</h2>
+	<div class="inputBox onlyNumber">
+		<input type="text" name="" class="inp onlyNumber" id="">
+		<button type="button" class="inpReset"></button>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox onlyNumber">
+				<input type="text" name="" class="inp onlyNumber" id="">
+				<button type="button" class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
 
 
 	<h2>input타입 - 증감</h2>
@@ -329,7 +358,6 @@
 	<!-- //souce code 뷰어 -->
 
 	<h2>Combobox</h2>
-
 	<div class="comboBox">
 		<select class="comboSelect" id="" placeholder="Select a Type">
 			<option value="">Select a Type</option>
@@ -349,6 +377,24 @@
 </div>
 
 value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동일해야 함.
+	</textarea>
+	<!-- //souce code 뷰어 -->
+
+	<h2>Item Select</h2>
+	<select name="" multiple class="ui fluid dropdown" id="">
+		<option value="">Select TAX Item(s)</option>
+		<option value="10%VAT">10% VAT</option>
+		<option value="5%EDUCATION TAX">5% EDUCATION TAX</option>
+		<option value="5%REGIONAL TAX">5% REGIONAL TAX</option>
+	</select>
+	<!-- souce code 뷰어 -->
+	<textarea name="" id="" cols="30" rows="10" class="pubTextarea">
+<select name="" multiple class="ui fluid dropdown" id="">
+	<option value="">Select TAX Item(s)</option>
+	<option value="10%VAT">10% VAT</option>
+	<option value="5%EDUCATION TAX">5% EDUCATION TAX</option>
+	<option value="5%REGIONAL TAX">5% REGIONAL TAX</option>
+</select>
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
