--- a/user/cup10101.html
+++ b/user/cup10101.html
@@ -166,8 +166,11 @@
 							<div class="inner">
 								<div class="lsCont">
 									<h3 class="tit" id="">Basic</h3>
-									<div style="height:50px; background:skyblue;">사진교체</div>
+									<div style="height:100px; background:green;">사진교체</div>
 									<ul class="itemList2">
+										<li>
+											<div style="height:120px; background:skyblue;">사진교체</div>
+										</li>
 										<li>
 											<dl class="inpItem">
 												<dt id="">Language Name</dt>
@@ -394,7 +397,7 @@
 									<div class="iTxtCont">
 										<p class="txt" id="">
 											Leave your organization? <br />To inactive the user account, you must define alternate account to organization’s subscription manager.
-									</p>
+										</p>
 											<div class="btnBox">
 												<button type="button" class="btn">Leave Organization</button>
 											</div>
